crates/reap-okx-live-adapter/tests/ui/internal_order_authority_is_private.rs
use reap_okx_live_adapter::{RegularExecution, RegularOrderSessionFactory};

fn expose_internal_order_authority(
    _execution: RegularExecution,
    _sessions: RegularOrderSessionFactory,
) {
}

fn main() {}
